# trooper

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  README.md  SECURITY.md  env.example  manage.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  django.yml
requirements/: base.txt  local.txt  prod.txt
test/: test_install.py
test/address_book/: test_models.py
test/members/: test_managers.py
test/website/: test_views.py
trooper/: asgi.py  urls.py  wsgi.py
trooper/address_book/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
trooper/address_book/migrations/: 0001_initial.py  0002_auto_20221021_1543.py  0002_auto_20221214_1723.py  0003_auto_20221023_0005.py  0003_auto_20230110_0533.py  0004_rename_zipcode_address_zip_code.py  0005_alter_phone_label.py  0006_alter_email_label.py  0007_alter_address_label.py
trooper/address_book/templates/address_book/: address_delete.html  address_form.html  address_list.html
trooper/address_book/templates/address_book/partials/: address_delete_form.html  address_form.html  address_list.html  address_list_entry.html  addresses_list.html  email_address_list.html  email_address_list_entry.html  email_addresses_list.html  phone_number_list.html  phone_number_list_entry.html  (+1 more)
trooper/assignments/: admin.py  apps.py  managers.py  models.py
trooper/assignments/migrations/: 0001_initial.py  0002_alter_committeemember_table.py  0002_initial.py  0003_alter_patrolmember_table.py  0004_auto_20230217_0022.py  0005_alter_leader_options.py
trooper/calendars/: admin.py  apps.py  converters.py  feeds.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
trooper/calendars/migrations/: 0001_initial.py  0002_initial.py
trooper/calendars/static/css/: calendar.css
trooper/calendars/templates/calendars/: event_detail.html  event_form.html  event_list.html
trooper/calendars/templatetags/: calendars.py
trooper/core/: admin.py  apps.py  utils.py
trooper/core/admin/: utils.py
trooper/core/static/css/: admin-colors.css  bootstrap.min.css  bootstrap.min.css.map  style.css
trooper/core/static/fonts/: bootstrap-icons.css
trooper/core/static/js/: bootstrap.bundle.min.js  bootstrap.bundle.min.js.map
trooper/core/templates/: 400.html  403.html  about.html  base.html  index.html
trooper/core/templates/partials/: footer.html  js.html  messages.html  navbar.html
trooper/members/: admin.py  apps.py  converters.py  forms.py  managers.py  models.py  urls.py  utils.py  validators.py  views.py
trooper/members/auth/: urls.py  views.py
trooper/members/migrations/: 0001_initial.py  0002_member_avatar.py  0002_member_date_of_birth.py  0003_auto_20221023_0005.py  0003_auto_20221206_0109.py  0004_auto_20221206_1608.py  0004_member_gender.py  0005_auto_20221024_1451.py  0005_remove_member_email.py  0006_member_date_of_death.py  0007_member_middle_name.py  0008_alter_familymember_family.py  0009_alter_familymember_table.py  0010_rename_avatar_member_photo.py  0011_alter_familymember_member.py  0012_alter_familymember_table.py  0013_auto_20230328_0001.py
trooper/members/models/: __init__.py  addresses.py  people.py
trooper/members/static/css/: login.css
trooper/members/templates/members/: member_confirm_delete.html  member_detail.html  member_form.html  member_list.html  signup.html
trooper/outings/: admin.py  apps.py  models.py
trooper/outings/migrations/: 0001_initial.py
trooper/settings/: base.py  local.py  production.py  test.py
trooper/static/css/: admin-colors.css  bsa-colors.css  error.css  style.css
trooper/static/fonts/roboto/: latin-ext.css
trooper/static/fonts/roboto-slab/: latin-ext-700.css
trooper/static/js/: htmx.min.js  main.js
trooper/templates/: 400.html  403.html  404.html  500.html  base.html
trooper/templates/admin/: base.html
trooper/templates/partials/: footer.html  js.html  messages.html  navbar.html
trooper/templates/partials/forms/: non_field_errors.html
trooper/website/: admin.py  apps.py  context_processors.py  managers.py  models.py  urls.py  views.py
trooper/website/migrations/: 0001_initial.py  0002_alter_page_is_builtin.py  0002_auto_20221109_1958.py  0003_content_gallery_controls.py  0004_auto_20221129_2248.py  0005_configuration_footer_text.py  0006_auto_20230127_0053.py  0007_alter_page_options.py
trooper/website/templates/website/: about.html  contact.html  detail.html  home.html
trooper/website/templatetags/: website_tags.py
(+28 files in other folders)
