[tool.poetry]
name = "trooper"
version = "0.1.0"
license = "MIT"
description = "Simple BSA Troop management application."
authors = ["John Lawrence <thirdjal@users.noreply.github.com>"]
readme = "README.md"

[tool.black]
extend-exclude = "migrations/"
target-version = ["py39"]

[tool.isort]
profile = "black"
extend_skip = "migrations"
known_django = "django"
known_first_party = "trooper"
sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]

[tool.poetry.dependencies]
python = "^3.8.16"
django = {extras = ["argon2"], version = "^4.2.7"}
django-environ = "^0.11.2"
django-ical = "^1.9.0"
django-localflavor = "^4.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.2.0"}
django-recurrence = "^1.11.1"
django-widget-tweaks = "^1.5.0"
docutils = "^0.20.1"
pillow = "^10.1.0"
sorl-thumbnail = "^12.10.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-colorfield = "^0.10.1"
sentry-sdk = "^1.34.0"
django-htmx = "^1.17.0"
vobject = "^0.9.6.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
black = "*"
flake8 = "^6.1.0"
isort = "*"
pre-commit = "*"


[tool.poetry.group.production.dependencies]
psycopg-binary = "^3.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
select = ["E", "F", "B", "UP", "S", "DJ"]
extend-exclude = ["migrations"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"*/settings/*.py" = [
  "F403",  # from {name} import * used; unable to detect undefined names
  "F405",  # {name} may be undefined, or defined from star imports
]
